--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>Some Cool Website</h1>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
