feat : added a fancy title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Document</title>
 </head>
 <body>
+  <main>
+    <h1>Fancy Title!</h1>
+  </main>
+
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
