cards are setup but still need more formatting

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>Document</title>
 </head>
 <body>
-
-  <div class="card" style="width: 18rem;">
+<div class="container">
+  <div class="card">
     <img src="https://picsum.photos/200/300" class="card-img-top" alt="placeholder">
     <div class="card-body">
       <h5 class="card-title">Cards are Cool</h5>
@@ -22,6 +22,8 @@
     </div>
   </div>
   <h1>Some Cool Website</h1>
+
+</div>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
