feat : added nav with blank hred

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
   <title>Document</title>
 </head>
 <body>
-  <main>
-    <h1>Fancy Title!</h1>
-  </main>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Homepage<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Contacts</a>
+        <a class="nav-item nav-link" href="#">Dashboard</a>
+      </div>
+    </div>
+  </nav>
 
   <script src="./assets/js/script.js"></script>
 </body>
